1. minor expression change, 2. add Chinese Version中文简历

--- a/Resume/2019王良简历.tex
+++ b/Resume/2019王良简历.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 \thispagestyle{empty}
-\header{Wang}{ Liang} {programmer + machine learning + mathematics}
+\header{王}{良(亮)} {NLP程序员 + 机器学习+ 数学}
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{contact}
@@ -17,7 +17,7 @@
     \href{mailto:mathmad@163.com}{mathmad@163.com}\\
     \href{mailto:wangliangster@gmail.com}{wangliang@gmail.com}\\
     \href{https://github.com/wangliangster}{github://wangliangster}\\
-    DaXing, Beijing, CN\\
+    北京大兴马赛公馆\\
    \vspace{\baselineskip}
   \section{languages}
     Python\\
@@ -73,47 +73,47 @@
 \end{aside}
 
 \begin{body}
-\section{Experience}
+\section{工作经历}
 \begin{entrylist}
   \entry
     {10/2018-now}
     {Artificial-Intelligence-for-NLP China Team}
-    {NLP Programmer}
-    {\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{News view point extractor}, \href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{Beijing subway transfer search}, DFS/BFS graph search, TF-IDF, Deep Learning Algorithm and \href{https://github.com/wangliangster/TestWL/blob/master/wordcloudLiang.ipynb}{wordcloud} produce }	
+    {算法工程师}
+    {\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{新闻观点抽取}, \href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{北京地铁换乘方案}, 运用了DFS/BFS图搜索, TF-IDF, 常用深度学习算法，以及生成 \href{https://github.com/wangliangster/TestWL/blob/master/wordcloudLiang.ipynb}{词云}等技术 }	
   \entry
     {5/2013-10/2018}
-    {GE Healthcare}
-    {Lead Software Engineer}
-    {Image Quality process and Auto Test tool  CI/OEM develop leader, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-hd-x-ray-system-powered-by-helix}{Discovery XR656 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646-hd-x-ray-system-powered-by-helix}{Optima XR646 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-plus}{Discovery XR656 plus}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646}{Optima XR646} Fixed Radiography Systems Lead Software Integrator, Platform of X-Ray Exposure control system developer, Offline software tools such as Ghost, Linux System-Rescue, ISO build and CD burn strong contributor}
+    {通用电气$\bullet$医疗集团(GE)}
+    {高级软件工程师}
+    {图像处理和自动化测试工具CI及OEM等项目开发Leader; \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-hd-x-ray-system-powered-by-helix}{Discovery XR656 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646-hd-x-ray-system-powered-by-helix}{Optima XR646 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-plus}{Discovery XR656 plus}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646}{Optima XR646} 三代X光机系统项目集成Leader; X-Ray爆光控制平台开发; 以及Ghost, Linux 系统恢复, ISO 生成和 CD/DVD 制作等软件工具团队主要贡献者}
   \entry
     {4/2011-5/2013}
-    {China Nuclear Control Systems Engineering Co., Ltd}
-    {Senior Software Engineer}
-    {Nicsys1000 system developer, design various HMI with QT for Nuclear Power Plant DCS(Distributed real-time control system), build SVN server for team, bring team member to QT conference for new technology deep dive }
+    {中核控制系统工程有限公司(中核集团)}
+    {资深软件工程师}
+    {Nicsys1000系统开发, 基于QT开发了大量核电站DCS系统的HMI, 搭建SVN服务, 带领团队参加QT大会作深入交流}
   \entry
     {6/2010-3/2011}
-    {Carestream Healthcare}
-    {Software Intern}
-    {Carestream X-Ray System DR V5 build for cells setup, and report bug with Bugzilla}
+    {锐珂医疗}
+    {实习生}
+    {锐珂医疗X光机DR V5 build 和实验室安装, 用Bugzilla报告Bug并尝试修复}
 \end{entrylist}
 
 
-\section{Education}
+\section{教育背景}
 \begin{entrylist}
   \entry
     {2008-2011}
-    {M.A., Computer Science}
-    {ShangHai University}
+    {硕士(计算机)}
+    {上海大学}
     {Graduate course sequences in Combinatorics/Graph Theory, Probability, plus Computer Engineering }
   \entry
     {2003-2007}
-    {B.S., Mathematics}
-    {JXUFE}
+    {本科(应用数学)}
+    {江西财经大学}
     {Pure mathematics concentration. Courses in Analysis, Algebra, Combinatorics, Probability}
 \end{entrylist}
 
 
-\section{Projects}
+\section{项目经验}
 \begin{entrylist}
   \projectentry
     {10/2018-now}
@@ -129,20 +129,20 @@
     {3/2017-5/2018}
     {Reli}
     {GE Project}
-    {Reliability is an auto test tool for GE products internal CI, developed with python, tk/tcl, shell scripts, ssh, minicom etc skills under Linux, involved random algorithm testing instead of old tool which use fixed steps method record by VNC, improve coverage rate greatly, own high reputation }
+    {Reli是GE内部一可靠性自动化测试工具，旨在测试GE新一代X光机产品的可靠性。积累了大量数据，可自动分析log生成报告，依据可靠性理论和数据指导项目开发的关注和待改进点，快速响应客户问题。用python, tk/tcl, shell scripts, ssh, minicom等技术基于Linux平台开发, 引入了随机算法，与旧工具每天人工VNC录屏的方式相比, 极大的提高了覆盖率，获得良好赞誉}
      \projectentry
     {10/2013-9/2017}
     {\href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems}{Everest G1/G2/G3}}
     {GE Project}
-    {Everest G1/G2/G3 are a sequences of GE's Radiography Family products which developed by global team, as a Lead Software Integrator, I am along with them all the way }
+    {Everest G1/G2/G3 are a sequences of GE's Radiography Family products which developed by global team, as a Lead Software Integrator, I am along with them all the way  }
      \projectentry
     {5/2013-10/2013}
     {Calypso}
     {GE Project}
-    {Calypso is a Platform of exposure control system which used for GE Fixed X-Ray products under Linux}
+    {Calypso是GE X光机系列产品众多通用平台中的爆光序列控制平台，主要为GE系列产品提供实时爆光控制，产品配置和登录管理等服务。}
 \end{entrylist}
 
-\section{Miscellaneous}
+\section{其它}
 \begin{entrylist}
    \otherentry
    {2018}
