更新简历主页，项目经验评论分类到中英文简历

--- a/Resume/2019王良简历.tex
+++ b/Resume/2019王良简历.tex
@@ -16,7 +16,7 @@
     (+86)13810716443\\
     \href{mailto:mathmad@163.com}{mathmad@163.com}\\
     \href{mailto:wangliangster@gmail.com}{wangliang@gmail.com}\\
-    \href{https://github.com/wangliangster}{github://wangliangster}\\
+    \href{https://wangliangster.github.io}{个人主页}\\
     北京大兴马赛公馆\\
    \vspace{\baselineskip}
   \section{languages}
@@ -79,7 +79,7 @@
     {10/2018-now}
     {Artificial-Intelligence-for-NLP China Team}
     {算法工程师}
-    {\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{新闻观点抽取}, \href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{北京地铁换乘方案}, 运用了DFS/BFS图搜索, TF-IDF, 常用深度学习算法，以及生成 \href{https://github.com/wangliangster/TestWL/blob/master/wordcloudLiang.ipynb}{词云}等技术 }	
+    {\href{https://github.com/Artificial-Intelligence-for-NLP-and-CV/comment-setimental-classification}{细粒度情感言论分类},\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{新闻观点抽取}, \href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{北京地铁换乘方案}, 运用了DFS/BFS图搜索, TF-IDF, 常用深度学习算法，以及生成 \href{https://github.com/wangliangster/TestWL/blob/master/wordcloudLiang.ipynb}{词云}等技术 }	
   \entry
     {5/2013-10/2018}
     {通用电气$\bullet$医疗集团(GE)}
@@ -90,11 +90,6 @@
     {中核控制系统工程有限公司(中核集团)}
     {资深软件工程师}
     {Nicsys1000系统开发, 基于QT开发了大量核电站DCS系统的HMI, 搭建SVN服务, 带领团队参加QT大会作深入交流}
-  \entry
-    {6/2010-3/2011}
-    {锐珂医疗}
-    {实习生}
-    {锐珂医疗X光机DR V5 build 和实验室安装, 用Bugzilla报告Bug并尝试修复}
 \end{entrylist}
 
 
@@ -115,14 +110,19 @@
 
 \section{项目经验}
 \begin{entrylist}
+ \projectentry
+  {01/2019-now}
+  {\href{https://github.com/Artificial-Intelligence-for-NLP-and-CV/comment-setimental-classification}{评论细粒度分类}}
+  {NLP Project}
+  {对来源于大众点评的数据集，进行6大类，20小类打标，对于每个小类，都会有< 正面情感, 中性情感, 负面情感, 情感倾向未提及 > 这4个类别}
   \projectentry
-    {10/2018-now}
-    {\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{News view point extractor}}
+    {10/2018-01/2019}
+    {\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{新闻人物言论提取}}
     {NLP Project}
     {Use word2vec and TF-IDF, probability Algorithms, this project aims to for any input News text, extract the main view point of each speaker, present it as format "who said what" }
   \projectentry
     {11/2018-12/2018}
-    {\href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{Beijing subway transfer search}}
+    {\href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{地铁换乘图搜索解决方案}}
     {Hobby Graph Search Project}
     {Use BFS/DFS/A* Algorithms, demo a Graph search solution, land on Beijing Subway transfer search}
     \projectentry
@@ -135,11 +135,6 @@
     {\href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems}{Everest G1/G2/G3}}
     {GE Project}
     {Everest G1/G2/G3 are a sequences of GE's Radiography Family products which developed by global team, as a Lead Software Integrator, I am along with them all the way  }
-     \projectentry
-    {5/2013-10/2013}
-    {Calypso}
-    {GE Project}
-    {Calypso是GE X光机系列产品众多通用平台中的爆光序列控制平台，主要为GE系列产品提供实时爆光控制，产品配置和登录管理等服务。}
 \end{entrylist}
 
 \section{其它}
