--- a/Resume/Resume_Liang_2019.tex
+++ b/Resume/Resume_Liang_2019.tex
@@ -16,7 +16,7 @@
     (+86)13810716443\\
     \href{mailto:mathmad@163.com}{mathmad@163.com}\\
     \href{mailto:wangliangster@gmail.com}{wangliang@gmail.com}\\
-    \href{https://github.com/wangliangster}{github://wangliangster}\\
+    \href{https://wangliangster.github.io}{https://wangliang.github.io}\\
     DaXing, Beijing, CN\\
    \vspace{\baselineskip}
   \section{languages}
@@ -90,11 +90,6 @@
     {China Nuclear Control Systems Engineering Co., Ltd}
     {Senior Software Engineer}
     {Nicsys1000 system developer, design various HMI with QT for Nuclear Power Plant DCS(Distributed real-time control system), build SVN server for team, bring team member to QT conference for new technology deep dive }
-  \entry
-    {6/2010-3/2011}
-    {Carestream Healthcare}
-    {Software Intern}
-    {Carestream X-Ray System DR V5 build for cells setup, and report bug with Bugzilla}
 \end{entrylist}
 
 
@@ -135,11 +130,6 @@
     {\href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems}{Everest G1/G2/G3}}
     {GE Project}
     {Everest G1/G2/G3 are a sequences of GE's Radiography Family products which developed by global team, as a Lead Software Integrator, I am along with them all the way }
-     \projectentry
-    {5/2013-10/2013}
-    {Calypso}
-    {GE Project}
-    {Calypso is a Platform of exposure control system which used for GE Fixed X-Ray products under Linux}
 \end{entrylist}
 
 \section{Miscellaneous}
