--- a/Resume/2019王良简历.tex
+++ b/Resume/2019王良简历.tex
@@ -3,23 +3,44 @@
 
 %set line space for Chinese and English share
 \usepackage[nodisplayskipstretch]{setspace} % In my case
-\setstretch{0.9} % 1.5/1.2 = 1.25
+\setstretch{0.8} % 1.5/1.2 = 1.25
 \usepackage{caption}
 \captionsetup{font={stretch=\setstretch}}
 
 \begin{document}
 \thispagestyle{empty}
-\header{王}{良(亮)} {NLP程序员 + 机器学习+ 数学}
+\header{王}{良} {目标岗：NLP程序员 / 机器学习/ 深度学习/ 数学研究员}
 % In the aside, each new line forces a line break
 \begin{aside}
-  \section{contact}
+  \section{Contact:}
     (+86)13810716443\\
     \href{mailto:mathmad@163.com}{mathmad@163.com}\\
     \href{mailto:wangliangster@gmail.com}{wangliang@gmail.com}\\
-    \href{https://wangliangster.github.io}{个人主页}\\
-    北京大兴马赛公馆\\
+    北京大兴\\
    \vspace{\baselineskip}
-  \section{languages}
+  \section{Interests:}
+  unsupervised learning\\
+  \smallitem{+ clustering algorithms}\\
+  \smallitem{+ dimensionality reduction}\\
+   text analysis\\
+  \smallitem{+ entity resolution}\\
+  \smallitem{+ distributional semantics}\\
+   harmonic analysis\\
+  \smallitem{+Fourier transfer}\\
+  \smallitem{+Wavelet analysis}\\
+  Riemann Hypothesis\\
+   \vspace{\baselineskip}
+  \section{Algorithms:}
+  \smallitem{PCA/SVD/SGD}\\
+  \smallitem{CNN/RNN/LSTM}\\
+  \smallitem{DFS/BFS/TF-IDF}\\
+  \smallitem{NB/LR/SVM}\\
+  \smallitem{KNN/XGBoost/LDA}\\
+  \smallitem{Word2Vec/Doc2Vec}\\
+  \smallitem{DFT/FFT}\\
+ Tensorflow/Keras/Pytorch\\
+  \vspace{\baselineskip}
+  \section{Languages:}
     Python\\
     \smallitem{+ numpy/scipy/pandas}\\
     \smallitem{+ scikit-learn}\\
@@ -37,41 +58,23 @@
     Tk/Tcl\\
     Perl\\
     Qt\\
-    C\#\\
     SQL\\
     Java\\
     \LaTeX \\
    \vspace{\baselineskip}
-  \section{computing}
+  \section{Computing:}
    Linux\\
-   \smallitem{Redhat/CentOS}\\
-   \smallitem{+ rpmbuild}\\
-   \smallitem{+ sed/awk/grep/vi}\\
-   \smallitem{Ubuntu/Gento}\\
+   \smallitem{+ sed/awk/grep/vi/grub}\\
    \smallitem{+ SystemRescueCd}\\
-   \smallitem{+ grub}\\
    \smallitem{+ minicom/vnc/ftp/ssh}\\
-   Mac OS\\
    \smallitem{+ Anaconda}\\
    Common\\
    \smallitem{+ jekins}\\
    \smallitem{+ git}\\
-   \smallitem{+ svn}\\
    \smallitem{+ clearcase}\\
    \vspace{\baselineskip}
-\section{interests}
-  text analysis\\
-  \smallitem{+ entity resolution}\\
-  \smallitem{+ distributional semantics}\\
-  unsupervised learning\\
-  \smallitem{+ clustering algorithms}\\
-  \smallitem{+ dimensionality reduction}\\
-   harmonic analysis\\
-  \smallitem{+Fourier transfer}\\
-  \smallitem{+Wavelet analysis}\\
-  Riemann Hypothesis\\
-\end{aside}
 
+\end{aside}
 \begin{body}
 \section{工作经历}
 \begin{entrylist}
@@ -82,7 +85,7 @@
     {\href{https://github.com/Artificial-Intelligence-for-NLP-and-CV/comment-setimental-classification}{细粒度情感言论分类},\href{https://github.com/wangliangster/TestWL/blob/master/ViewPointExtract.ipynb}{新闻观点抽取}, \href{https://github.com/wangliangster/NLP-Course/blob/master/BeijingSubway.ipynb}{北京地铁换乘方案}, 运用了DFS/BFS图搜索, TF-IDF, 常用深度学习算法，以及生成 \href{https://github.com/wangliangster/TestWL/blob/master/wordcloudLiang.ipynb}{词云}等技术 }	
   \entry
     {5/2013-10/2018}
-    {通用电气$\bullet$医疗集团(GE)}
+    {通用电气(GE)$\bullet$医疗集团}
     {高级软件工程师}
     {图像处理和自动化测试工具CI及OEM等项目开发Leader; \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-hd-x-ray-system-powered-by-helix}{Discovery XR656 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646-hd-x-ray-system-powered-by-helix}{Optima XR646 HD}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/discovery-xr656-plus}{Discovery XR656 plus}, \href{https://www.gehealthcare.com/en/products/radiography/fixed-rad-systems/optima-xr646}{Optima XR646} 三代X光机系统项目集成Leader; X-Ray爆光控制平台开发; 以及Ghost, Linux 系统恢复, ISO 生成和 CD/DVD 制作等软件工具团队主要贡献者}
   \entry
@@ -92,21 +95,21 @@
     {Nicsys1000系统开发, 基于QT开发了大量核电站DCS系统的HMI, 搭建SVN服务, 带领团队参加QT大会作深入交流}
 \end{entrylist}
 
-
 \section{教育背景}
 \begin{entrylist}
   \entry
     {2008-2011}
     {硕士(计算机)}
     {上海大学}
-    {Graduate course sequences in Combinatorics/Graph Theory, Probability, plus Computer Engineering }
+    {Graduate course sequences in Combinatorics/Graph Theory, Probability, plus Computer Engineering}
   \entry
     {2003-2007}
     {本科(应用数学)}
     {江西财经大学}
     {Pure mathematics concentration. Courses in Analysis, Algebra, Combinatorics, Probability}
+   \entry {\href{https://wangliangster.github.io}{个人主页:}}
+   {\href{https://wangliangster.github.io}{https://wangliangster.github.io}}{注意：上下文所有蓝色字体均为有效超链接，详情可点入浏览}{}
 \end{entrylist}
-
 
 \section{项目经验}
 \begin{entrylist}
@@ -149,16 +152,16 @@
     {Crotonville Leadership}
      \otherentry
     {2016}
-    {\href{https://github.com/wangliangster/TestWL/blob/master/Fouries\%20Transfer\%20Notes3.pdf}{Fourier series deep explanation }}
-    {Internal Seminar }
+    {\href{https://github.com/wangliangster/TestWL/blob/master/Fouries\%20Transfer\%20Notes3.pdf}{Liang Wang; Fourier series deep explanation }}
+    {GE Internal Seminar }
      %\otherentry
     %{2015}
    % {PRESENTATION SKILLS AT GE}
     %{Crotonville Leadership}
     \otherentry
     {2010}
-    {\href{https://ieeexplore.ieee.org/document/5564214}{A new solution of node splitting to the R Tree algorithm}}
-    {IEEE Paper}
+    {\href{https://ieeexplore.ieee.org/document/5564214}{Liang Wang; Songnian Yu; Feng Chen：“A new solution of node splitting to the R Tree algorithm”}}
+    {IEEE}
 \end{entrylist}
 \end{body}
 \end{document}
