--- a/Resume/Resume_Liang_2019.tex
+++ b/Resume/Resume_Liang_2019.tex
@@ -9,17 +9,38 @@
 
 \begin{document}
 \thispagestyle{empty}
-\header{Wang}{ Liang} {programmer + machine learning + mathematics}
+\header{Wang}{ Liang} {NLP programmer + machine/deep learning + mathematics}
 % In the aside, each new line forces a line break
 \begin{aside}
-  \section{contact}
+  \section{Contact}
     (+86)13810716443\\
     \href{mailto:mathmad@163.com}{mathmad@163.com}\\
     \href{mailto:wangliangster@gmail.com}{wangliang@gmail.com}\\
-    \href{https://wangliangster.github.io}{https://wangliang.github.io}\\
     DaXing, Beijing, CN\\
+  \vspace{\baselineskip}
+  \section{Interests}
+  unsupervised learning\\
+  \smallitem{+ clustering algorithms}\\
+  \smallitem{+ dimensionality reduction}\\
+   text analysis\\
+  \smallitem{+ entity resolution}\\
+  \smallitem{+ distributional semantics}\\
+   harmonic analysis\\
+  \smallitem{+Fourier transfer}\\
+  \smallitem{+Wavelet analysis}\\
+  Riemann Hypothesis\\
    \vspace{\baselineskip}
-  \section{languages}
+  \section{Algorithms}
+ \smallitem{PCA/SVD/SGD}\\
+  \smallitem{CNN/RNN/LSTM}\\
+  \smallitem{DFS/BFS/TF-IDF}\\
+  \smallitem{NB/LR/SVM}\\
+  \smallitem{KNN/XGBoost/LDA}\\
+  \smallitem{Word2Vec/Doc2Vec}\\
+  \smallitem{DFT/FFT}\\
+ Tensorflow/Keras/Pytorch\\
+  \vspace{\baselineskip}
+  \section{Languages}
     Python\\
     \smallitem{+ numpy/scipy/pandas}\\
     \smallitem{+ scikit-learn}\\
@@ -37,42 +58,26 @@
     Tk/Tcl\\
     Perl\\
     Qt\\
-    C\#\\
     SQL\\
     Java\\
     \LaTeX \\
    \vspace{\baselineskip}
-  \section{computing}
+  \section{Computing}
    Linux\\
-   \smallitem{Redhat/CentOS}\\
-   \smallitem{+ rpmbuild}\\
-   \smallitem{+ sed/awk/grep/vi}\\
-   \smallitem{Ubuntu/Gento}\\
+   \smallitem{+ sed/awk/grep/vi/grub}\\
    \smallitem{+ SystemRescueCd}\\
-   \smallitem{+ grub}\\
    \smallitem{+ minicom/vnc/ftp/ssh}\\
-   Mac OS\\
    \smallitem{+ Anaconda}\\
    Common\\
    \smallitem{+ jekins}\\
    \smallitem{+ git}\\
-   \smallitem{+ svn}\\
    \smallitem{+ clearcase}\\
    \vspace{\baselineskip}
-\section{interests}
-  text analysis\\
-  \smallitem{+ entity resolution}\\
-  \smallitem{+ distributional semantics}\\
-  unsupervised learning\\
-  \smallitem{+ clustering algorithms}\\
-  \smallitem{+ dimensionality reduction}\\
-   harmonic analysis\\
-  \smallitem{+Fourier transfer}\\
-  \smallitem{+Wavelet analysis}\\
-  Riemann Hypothesis\\
+
 \end{aside}
 
 \begin{body}
+
 \section{Experience}
 \begin{entrylist}
   \entry
@@ -92,7 +97,6 @@
     {Nicsys1000 system developer, design various HMI with QT for Nuclear Power Plant DCS(Distributed real-time control system), build SVN server for team, bring team member to QT conference for new technology deep dive }
 \end{entrylist}
 
-
 \section{Education}
 \begin{entrylist}
   \entry
@@ -105,8 +109,9 @@
     {B.S., Mathematics}
     {JXUFE}
     {Pure mathematics concentration. Courses in Analysis, Algebra, Combinatorics, Probability}
+    \entry {\href{https://wangliangster.github.io}{GitHub Pages:}}
+   {\href{https://wangliangster.github.io}{https://wangliangster.github.io}}{Note: all blue fonts are available links}{}
 \end{entrylist}
-
 
 \section{Projects}
 \begin{entrylist}
@@ -144,16 +149,16 @@
     {Crotonville Leadership}
      \otherentry
     {2016}
-    {\href{https://github.com/wangliangster/TestWL/blob/master/Fouries\%20Transfer\%20Notes3.pdf}{Fourier series deep explanation }}
-    {Internal Seminar }
+    {\href{https://github.com/wangliangster/TestWL/blob/master/Fouries\%20Transfer\%20Notes3.pdf}{Liang Wang; "Fourier series deep explanation" }}
+    {GE Internal Seminar}
      %\otherentry
     %{2015}
    % {PRESENTATION SKILLS AT GE}
     %{Crotonville Leadership}
     \otherentry
     {2010}
-    {\href{https://ieeexplore.ieee.org/document/5564214}{A new solution of node splitting to the R Tree algorithm}}
-    {IEEE Paper}
+    {\href{https://ieeexplore.ieee.org/document/5564214}{Liang Wang; Songnian Yu; Feng Chen：“A new solution of node splitting to the R Tree algorithm”}}
+    {IEEE}
 \end{entrylist}
 \end{body}
 \end{document}
