--- a/N级台阶问题.ipynb
+++ b/N级台阶问题.ipynb
@@ -48,7 +48,7 @@
     "##从上面的分析，可知，如果要定义0级台阶有0种走法的话，即 F(0)=0\n",
     "def F(N):\n",
     "    if N==0:return 0\n",
-    "    if N==0:return 1 \n",
+    "    if N==1:return 1 \n",
     "    steps=0\n",
     "    \n",
     "    for i in range(1,N):\n",
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
      "execution_count": 8,
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "F(2)"
+    "F(1)"
    ]
   },
   {
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "2"
       ]
      },
      "execution_count": 9,
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "F(3)"
+    "F(2)"
    ]
   },
   {
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "4"
       ]
      },
      "execution_count": 10,
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "F(4)"
+    "F(3)"
    ]
   },
   {
@@ -230,10 +230,30 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "8"
       ]
      },
      "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,26 +281,6 @@
     "    for i in range(1,N+1):\n",
     "        steps+=F(N-i)\n",
     "    return steps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F(0)"
    ]
   },
   {
@@ -300,7 +300,7 @@
     }
    ],
    "source": [
-    "F(1)"
+    "F(0)"
    ]
   },
   {
@@ -311,10 +311,30 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "1"
       ]
      },
      "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,35 +353,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "###形似斐波那极数列, (本质上是不是Fabonaci呢？没真正理解就别瞎扯蛋了！)\n",
     "def F1(N):\n",
-    "    if N==0:return 1\n",
+    "    if N<=0:return 1 # 考虑负数，防止递归越界\n",
     "    if N==1:return 1\n",
     "    return F1(N-1)+F1(N-2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F1(0)"
    ]
   },
   {
@@ -381,7 +381,7 @@
     }
    ],
    "source": [
-    "F1(1)"
+    "F1(0)"
    ]
   },
   {
@@ -392,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
      "execution_count": 19,
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "F1(2)"
+    "F1(1)"
    ]
   },
   {
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
      "execution_count": 20,
@@ -421,7 +421,7 @@
     }
    ],
    "source": [
-    "F1(3)"
+    "F1(2)"
    ]
   },
   {
@@ -432,10 +432,30 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
      "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F1(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
